--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-body {
+html {
     height: 100%;
-    background: linear-gradient(#000000, #7e00ff);
+}
+
+body {
+    background: linear-gradient(#7e00ff, #000000);
 }
 
 h1, p {
@@ -14,7 +17,6 @@ h1, p {
     justify-content: center;
 }
 
-
 .playSoundCol {
     display: flex;
     justify-content: center;
@@ -25,11 +27,12 @@ h1, p {
     background: linear-gradient(#7e00ff, #000000);
     padding: 10px;
     border: solid rgb(255, 255, 255) 2px;
-    margin: 10px;
+    margin: 5px;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
+
 .playSoundCol > div> button:hover {
     border: solid rgb(255, 217, 0) 2px;
     color: rgb(255, 217, 0);
@@ -45,11 +48,51 @@ h1, p {
     background-color: rgb(59, 0, 155);
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
 footer > a {
     color: white;
     text-decoration: none;
+    
 }
 
 footer > a:hover {
     font-size: large;
+}
+
+footer > a > img {
+    width: 50px;
+    padding: 5px;
+    margin: 2px;
+}
+
+footer > a > img:hover {
+    filter: drop-shadow(5px 5px 5px rgb(31, 31, 31));
+}
+
+
+@media only screen and (max-width: 600px) {
+    .app {
+        display: flex;
+        justify-content: center;
+        /* flex-direction: column; */
+        flex-wrap: wrap;
+        
+    }
+
+    .playSoundCol {
+        width: 33%;
+        /* box-sizing: border-box; */
+    }
+
+    .playSoundCol > div {
+        align-self: center;
+    }
 }
